Before Anshuman Changes which are primarily in Opt Int section

--- a/abstract.tex
+++ b/abstract.tex
@@ -37,8 +37,7 @@ the number of writes and query response times, the algorithms are
 also evaluated on their wear distributions. Our experimental results
 suggest that the PCM-conscious operators collectively reduce the number
 of writes by a factor of 2 to 3, while concurrently improving the query
-response times by about 20 to 30\%.  Further, the wear distribution
-is also appreciably smoother. In essence, our algorithms provide both short-term and
+response times by about 20 to 30\%. In essence, our algorithms provide both short-term and
 long-term benefits. These outcomes augur well for database engines that
 wish to leverage the impending transition to PCM-based computing.
 
