--- a/appendix.tex
+++ b/appendix.tex
@@ -98,7 +98,7 @@ bytes. Replacing the values for $N_R L_R$ in Equation \ref{eq:mpivot},
 we get the writes as 
 \begin{small}
 $$W_{mpivot}(bytes) \approx 2 \times 214 \times
-10^6  = 428 \times 10^6 $$. 
+10^6  = 428 \times 10^6 $$ 
 \end{small}
 Thus both the estimates are close to the
 observed writes.
